# powergrid_benchmark

./: .gitignore  PROJECT_MEMORY.md  README.md
ara_artifacts/: README.md
ara_artifacts/2026_c2ges_engineeringletters/: PAPER.md
ara_artifacts/2026_ma_sqlgrid_cmc/: PAPER.md
ara_artifacts/_template/: PAPER.md
ara_collections/dataset_benchmark_papers/: README.md  code_harvest_manifest.csv  collection_manifest.csv
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/: .gitignore  LICENSE  README.md  pyproject.toml
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/batchjobs/: agent_evaluation.sh  create_act_space.sh  create_env.sh  generate_data_split_days.sh  generate_data_train_val_test.sh  run_agent_analysis.sh  train_ppo_baseline.sh
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/configs/l2rpn_case14_sandbox/: opponent.yaml
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/scripts/: agent_evaluation.py  develop_action_spaces.py  generate_per_day_scenarios.py  generate_scaling_array.py  generate_train_val_test_split.py  multiple_agent_analysis.py  summarize_evaluation_data.py  train_ppo_baseline.py  update_wandb.py
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/src/rl4pnc/algorithms/: custom_ppo.py  optuna_search.py
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/src/rl4pnc/evaluation/: evaluation_agents.py  utils.py
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/src/rl4pnc/experiments/: action_spaces.py  callback.py  rewards.py  utils.py  yaml.py
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/src/rl4pnc/grid2op_env/: utils.py
ara_collections/dataset_benchmark_papers/papers/lit_2025_grid2op_datasets_033_optimizing_power_grid_topologies_with_reinforcement_learning_a_s/src/code/repo/src/rl4pnc/multi_agent/: policy.py
ara_collections/target_journal_related/: collection_manifest.csv
configs/: README.md
configs/datasets/: ieee14_synthetic_smoke.json
configs/experiments/: ieee14_load_forecast_smoke.json
configs/metrics/: forecasting_core.json
configs/models/: persistence_baseline.json
configs/splits/: smoke_temporal_split.json
configs/systems/: ieee14.json
data/: README.md
data/metadata/: README.md
data/public_dataset_archives/: README.md  archives_manifest.csv  (+3 more)
env/: README.md
experiments/: README.md
external_repos/: README.md  repo_candidates.csv
knowledge_base/: README.md
notebooks/: README.md
paper/: README.md
paper_projects/: README.md
papers/: README.md
research_wiki/: README.md  index.md
scripts/: README.md  validate_scaffold.py
tests/: README.md  test_config_loader.py  test_metrics.py  test_mintou_experiments.py
upload/: power_grid_review_for_advisor.md  power_grid_review_integrated_latest.md  power_grid_review_integrated_latest_1.md  我要做学术论文，内容和电力系统、电网运行、电力设备、光伏和风电等相关，采用比较流行的AI算法，有哪些.md
(+2875 files in other folders)
