# BUILD METADATA

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# PROJECT METADATA

[project]

# Package name

name = "rl4pnc"
version = "0.1.0"

# Authors

authors = [
    {name = "EricavanderSar", email = "ericavandersar@gmail.com"},
]

# Package info

description = "Implementing RL for Grid2Op topology control."
readme = "README.md"

keywords = ["rl", "grid2op", "ppo", "reinforcement-learning", "power-grid", "topology-control"]

license = "MIT"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]

# Requirements and dependencies

requires-python = ">=3.10"

dependencies = [
  "Grid2Op==1.10.5",
  "pandapower==2.14.11",
  "numba>=0.56.4",
  "numpy>=1.24",
  "ray==2.10.0",
  "lz4==4.3.2",
  "pyarrow==13.0.0",
  "dm_tree==0.1.8",
  "scikit-image==0.19.3",
  "scikit-learn==1.2.2",
  "scikit-network==0.30.0",
  "scipy==1.8",
  "seaborn==0.13.2",
  "gym==0.26.2",
  "gymnasium==0.29.1",
  "protobuf==3.20.3",
  "torch==1.13.1",
  "torch-geometric==2.3.0",
  "torchaudio==0.13.1",
  "torchvision==0.14.1",
  "pandas==1.3.5",
  "tensorboardX==2.6",
  "rich==12.1.0",
  "typeguard==4.0.0",
  "fsspec==2023.10.0",
  "tabulate",
  "wandb",
  "optuna",
  "typer",
  "ipykernel",
  "pathos",
  "SciencePlots"
]

[project.optional-dependencies]
dev = [
  "black==23.3.0",
  "flake8==6.0.0",
  "pylint==2.17.4",
  "autoflake==2.1.1",
  "mypy==1.2.0",
  "hypothesis==6.75.2",
  "pytest==7.3.1",
  "pytest-cov==4.0.0",
  "tox==3.28.0",
  "pre-commit==3.3.1",
  "pre-commit-hooks==4.4.0",
  "jupyterlab==4.0.2",
  "pylint-print==1.0.1",
  "flake8-junit-report",
  "flake8-print",
  "flake8-pyproject",
  "isort",
  "pep8-naming",
  "pytest-dotenv",
  "pytest-mock",
  "typeguard",
]

# Tools settings

# Coverage

[tool.coverage.run]
branch = true
parallel = true
source = ["gridmind"]

[tool.coverage.report]
fail_under = 90
precision = 0
show_missing = true
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.coverage.paths]
source = [
   "src",
   ".tox/*/lib/site-packages/src",
   ".tox/*/lib/python*/site-packages/src",
   ".tox/pypy*/site-packages/src",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage-report.xml"

# Flake8

[tool.flake8]
max-complexity = 10
max-line-length = 125

# Isort

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Pylint

[tool.pylint.'MESSAGES CONTROL']

disable= [
  "fixme",
  "too-few-public-methods",
  "chained-comparison",
  "duplicate-code",
  "too-many-ancestors",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "protected-access",
  "unused-argument",
  "assignment-from-no-return",
]

max-line-length=125
max-args = 9
max-attributes = 9
load-plugins=["pylint_print"]

# Pytest

[tool.pytest.ini_options]
addopts = [
  "--durations=5",
  "--junit-xml=test-report.xml",
  "--new-first",
  "--show-capture=all",
  "--verbosity=4",
]
junit_family = "legacy"
testpaths = ["tests"]

[tool.mypy]

follow_imports = "skip"
strict = true
ignore_missing_imports = true
install_types = true
non_interactive = true
allow_subclassing_any = true
allow_untyped_calls = true
warn_unused_ignores = false